feat(product): 設定卡片輸入型屬性

--- a/src/app/product-card-list/product-card-list.component.html
+++ b/src/app/product-card-list/product-card-list.component.html
@@ -1,9 +1,6 @@
 <div class="container">
-  <app-product-card></app-product-card>
-  <app-product-card></app-product-card>
-  <app-product-card></app-product-card>
-  <app-product-card></app-product-card>
-  <app-product-card></app-product-card>
-  <app-product-card></app-product-card>
+  @for (product of products; track $index) { @if (product.isShow) {
+  <app-product-card [product]="product"></app-product-card>
+  } }
 </div>
 <app-pagination pageIndex="1" pageSize="3" totalCount="5"></app-pagination>
