--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,8 +1,8 @@
 <img src="https://api.fnkr.net/testimg/200x200/DDDDDD/999999/?text=img" />
-<strong>圖像 Angular 開發入門 第二版</strong>
+<strong>{{ product.name }}</strong>
 <div class="content">
-  <div>博碩文化</div>
-  <div>$1,500</div>
+  <div>{{ product.company }}</div>
+  <div>{{ product.price | currency }}</div>
 </div>
 <div class="button">
   <button>加入購物車</button>
