--- a/src/app/product-page/product-page.component.css
+++ b/src/app/product-page/product-page.component.css
@@ -2,3 +2,27 @@
   display: block;
   padding: 10px;
 }
+
+.search {
+  margin-bottom: 10px;
+  padding: 10px 0px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.search input[type='text'] {
+  padding: 5px;
+  width: 300px;
+  height: 30px;
+  font-size: 20px;
+}
+
+.search button {
+  padding: 8px;
+  font-size: 16px;
+  background-color: transparent;
+  cursor: pointer;
+  color: #005cbb;
+  border: 1px solid #005cbb;
+}
