--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -5,5 +5,5 @@
   <div>{{ product.price | currency }}</div>
 </div>
 <div class="button">
-  <button>加入購物車</button>
+  <button type="button" (click)="addTo.emit()">加入購物車</button>
 </div>
