--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -7,4 +7,5 @@
   [(pageIndex)]="pageIndex"
   [pageSize]="pageSize"
   [totalCount]="productCount$ | async"
+  (addTo)="shoppingCartService.addProduct($event)"
 />
