feat(order): 刪除購物車項目

--- a/src/app/shopping-cart-page/shopping-cart-page.component.html
+++ b/src/app/shopping-cart-page/shopping-cart-page.component.html
@@ -24,7 +24,7 @@
           <input type="number" formControlName="count" />
         </div>
         <div class="delete">
-          <button type="button">刪除</button>
+          <button type="button" (click)="onDelete(index, control.value.id)">刪除</button>
         </div>
       </ng-container>
     </div>
