--- a/src/app/shopping-cart-page/shopping-cart-page.component.html
+++ b/src/app/shopping-cart-page/shopping-cart-page.component.html
@@ -4,14 +4,17 @@
     <div class="form-item">
       <label>姓名</label>
       <input type="text" formControlName="name" />
+      <span class="error-message" *ngIf="name.hasError('required')">請輸入姓名</span>
     </div>
     <div class="form-item">
       <label>地址</label>
       <input type="text" formControlName="address" />
+      <span class="error-message" *ngIf="address.hasError('required')">請輸入地址</span>
     </div>
     <div class="form-item">
       <label>電話</label>
       <input type="text" formControlName="telephone" />
+      <span class="error-message" *ngIf="telephone.hasError('required')">請輸入電話</span>
     </div>
   </section>
   <section class="detail">
@@ -31,5 +34,5 @@
   </section>
 </div>
 <div class="tool-bar">
-  <button>送出訂單</button>
+  <button type="button" [disabled]="form.invalid || details.length === 0">送出訂單</button>
 </div>
