--- a/src/app/shopping-cart-page/shopping-cart-page.component.html
+++ b/src/app/shopping-cart-page/shopping-cart-page.component.html
@@ -26,6 +26,7 @@
         <div class="count">
           <input type="number" formControlName="count" />
         </div>
+        <div class="price">{{ control.value.price | currency }}</div>
         <div class="delete">
           <button type="button" (click)="onDelete(index, control.value.id)">刪除</button>
         </div>
@@ -34,5 +35,5 @@
   </section>
 </div>
 <div class="tool-bar">
-  <button type="button" [disabled]="form.invalid || details.length === 0">送出訂單</button>
+  <button type="button" [disabled]="form.invalid || details.length === 0">送出訂單 ({{ totalPrice | currency }})</button>
 </div>
