--- a/src/app/shopping-cart-page/shopping-cart-page.component.html
+++ b/src/app/shopping-cart-page/shopping-cart-page.component.html
@@ -35,5 +35,5 @@
   </section>
 </div>
 <div class="tool-bar">
-  <button type="button" [disabled]="form.invalid || details.length === 0">送出訂單 ({{ totalPrice | currency }})</button>
+  <button type="button" [disabled]="form.invalid || details.length === 0" (click)="onSave()">送出訂單 ({{ totalPrice | currency }})</button>
 </div>
