feat(product): 新增作者資訊

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,5 +1,11 @@
 <img src="https://api.fnkr.net/testimg/200x200/DDDDDD/999999/?text=img" />
 <strong>{{ product.name }}</strong>
+<div class="authors">
+  <span *ngFor="let author of product.authors; let last = last">
+    <span>{{ author }}</span>
+    <span *ngIf="!last">、</span>
+  </span>
+</div>
 <div class="content">
   <div>{{ product.company }}</div>
   <div>{{ product.price | currency }}</div>
