--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -8,4 +8,5 @@
   [pageSize]="pageSize"
   [totalCount]="productCount$ | async"
   (addTo)="shoppingCartService.addProduct($event)"
+  (view)="onView($event)"
 />
