--- a/src/app/product-detail-page/product-detail-page.component.html
+++ b/src/app/product-detail-page/product-detail-page.component.html
@@ -22,7 +22,7 @@
   <div class="button">
     <button type="button" (click)="onBack()">返回</button>
     <span>
-      <button type="button" (click)="addTo()">加入購物車</button>
+      <button type="button" class="addTo" (click)="shoppingCartService.addProduct(product)">加入購物車</button>
     </span>
   </div>
 </section>
