--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -1,1 +1,3 @@
-<button type="button" [class.active]="pageIndex === i" *ngFor="let i of range" (click)="onPageChange(i)">{{ i }}</button>
+@for (i of range; track i) {
+<button type="button" [class.active]="pageIndex === i" (click)="pageIndexChange.emit(i)">{{ i }}</button>
+}
