feat(product-detail): 產品明細頁顯示特價訊息

--- a/src/app/product-detail-page/product-detail-page.component.css
+++ b/src/app/product-detail-page/product-detail-page.component.css
@@ -33,6 +33,12 @@ section > div > span {
   font-size: 18px;
 }
 
+.discount {
+  color: red;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
 div.button {
   display: flex;
   justify-content: space-between;
